<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="116dp"
        android:layout_height="77dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:navGraph="@navigation/nav_graph" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="303dp"
        android:layout_height="63dp"
        android:fontFamily="monospace"
        android:text="@string/hello_welcome_to_the_clean_and_messy_room_predictor"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="93dp" />

    <ImageView
        android:id="@+id/input_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/input_image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-32dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="364dp"
        android:layout_height="79dp"
        android:text="@string/is_the_room_messy_or_clean_know_by_picking_an_image_and_check"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="546dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/check"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="650dp" />



</androidx.constraintlayout.widget.ConstraintLayout>