<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <fragment
        android:id="@+id/nav_host_fragment_content_image_predict"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/nav_graph2" />

    <ImageView
        android:id="@+id/input_image"
        android:layout_width="123dp"
        android:layout_height="69dp"
        android:layout_marginTop="264dp"
        android:contentDescription="@string/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_image_predict"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <TextView
        android:id="@+id/solution"
        android:layout_width="121dp"
        android:layout_height="38dp"
        android:layout_marginTop="136dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/predict"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/predict"
        app:layout_constraintTop_toBottomOf="@+id/predict" />

    <Button
        android:id="@+id/predict"
        android:layout_width="106dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:hint="@string/upload_room_image"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="@+id/input_image"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="@+id/input_image"
        app:layout_constraintTop_toBottomOf="@+id/input_image" />
</androidx.constraintlayout.widget.ConstraintLayout>